Use erb to interpolate Ruby in html

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,5 @@
 <div>
     <img src='http://bit.ly/1eze8aE' style='border: 6px dotted red'>
 </div>
+
+<h1>My name is <%= ["Amigo", "Oscar", "Viking"].sample %></h1>
