--- a/views/index.erb
+++ b/views/index.erb
@@ -2,4 +2,4 @@
     <img src='http://bit.ly/1eze8aE' style='border: 6px dotted red'>
 </div>
 
-<h1>My name is <%= ["Amigo", "Oscar", "Viking"].sample %></h1>
+<h1>My name is <%=@name_selector%> </h1>
