--- a/views/index.erb
+++ b/views/index.erb
@@ -3,3 +3,15 @@
 </div>
 
 <h1>My name is <%=@name%></h1>
+
+<%if !@name %>
+  <form action="/named-cat">
+    <div>    
+        <label for="name">Name:</label>    
+        <input type="text" name="name">    
+    </div>    
+    <div>    
+        <input type="submit" value="submit">    
+    </div>    
+  </form>
+<%end%>
