--- a/views/index.erb
+++ b/views/index.erb
@@ -4,8 +4,8 @@
 
 <h1>My name is <%=@name%></h1>
 
-<%if !@name %>
-  <form action="/named-cat">
+<%if @name == "" %>
+  <form action="/named-cat" method="post">
     <div>    
         <label for="name">Name:</label>    
         <input type="text" name="name">    
@@ -14,4 +14,4 @@
         <input type="submit" value="submit">    
     </div>    
   </form>
-<%end%>
+<%end %>
